--- a/TEST.ipynb
+++ b/TEST.ipynb
@@ -7,6 +7,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "####################################################### Set up paths #######################################################\n",
+    "\n",
+    "ddbb    = ... # Database name. No spaces, no underscore (_)\n",
+    "mode    = 'dicom' # Image mode. Options: 'nifti', 'dicom'\n",
+    "model   = 'Mixed_model' # Model for OAR segmentation. Options: 'FR_model' (French rectum), 'Mixed_model' (French + Italian databases)\n",
+    "use_manual_OARs   = True # Option to use manual OAR segmentations instead of automatic ones. Options : False, True\n",
+    "\n",
+    "####################################################### Set up paths #######################################################"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b0488a58",
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Imports\n",
     "import os\n",
     "import numpy as np\n",
@@ -14,24 +31,13 @@
     "import multiprocessing\n",
     "from glob import glob\n",
     "import pandas as pd\n",
-    "import time\n",
     "import warnings\n",
     "\n",
     "from utils.utilities import check_if_exist\n",
     "from utils.load_data import load_data\n",
     "from utils.voi_extraction import run_voi_extraction\n",
     "from utils.postprocessing import postprocessing_native, export2dicomRT\n",
-    "from utils.dm_computation import dm_computation\n",
-    "\n",
-    "# Set up paths\n",
-    "ddbb      = ...\n",
-    "mode      = 'dicom' #'nifti'\n",
-    "modality  = 'CT'\n",
-    "model     = 'FR_model' #'Mixed_model'\n",
-    "data_path = os.getcwd()+'/Input/'+ddbb\n",
-    "check_if_exist(data_path, create=False) # Check that the path exists\n",
-    "out_path  = os.path.join(os.getcwd(), 'Output', ddbb, modality)\n",
-    "check_if_exist(out_path)"
+    "from utils.dm_computation import dm_computation"
    ]
   },
   {
@@ -41,13 +47,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "start_ini = time.time()\n",
-    "# 1. Load patients (DICOM or NIfTI images)\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
     "print(\"1. LOADING ORIGINAL IMAGES...\")\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
-    "# CT and MR data have to be loaded separately, to indicate if they are in DICOM or NIfTI format\n",
-    "load_data(data_path, out_path, mode, modality=modality)"
+    "\n",
+    "# Create directories for input data path and output data path\n",
+    "data_path = os.path.join(os.getcwd(), 'Input', ddbb)\n",
+    "check_if_exist(data_path, create=False) # Check that the path exists\n",
+    "out_path  = os.path.join(os.getcwd(), 'Output', ddbb)\n",
+    "check_if_exist(out_path)\n",
+    "\n",
+    "# Load patients (DICOM or NIfTI images). The ddbb folder should contain a different folder for each case to process. In each\n",
+    "# case folder, the image scan should be saved in a sub-folder named \"img\", and the manual OAR segmentations - if available - in\n",
+    "# a sub-folder named \"mOAR\".\n",
+    "load_data(data_path, out_path, mode)"
    ]
   },
   {
@@ -57,14 +70,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 2. VOI Extraction: Localization Network + Crop using the centroid of the coarse segmentation. Check the result to ensure that\n",
-    "# appropriate VOI has been created. Sometimes some images are not well predicted and it's necessary to modify this VOI manually\n",
-    "# to ensure that the OARs and urethra segmentations are accurate.\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
     "print(\"2. VOI EXTRACTION...\")\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
-    "checkpoint_path = os.getcwd()+'/networks/LocalizationNet/LocalizationNet_weights.best.hdf5'\n",
-    "dir_ddbb     = os.path.join(out_path, modality+'s')\n",
+    "\n",
+    "# VOI Extraction: Localization Network + Crop using the centroid of the coarse prosate segmentation. Check the result to ensure\n",
+    "# that appropriate VOI has been created. Sometimes some images are not well predicted and it's necessary to modify this VOI \n",
+    "# manually to ensure that the OARs and urethra segmentations are accurate.\n",
+    "\n",
+    "checkpoint_path = os.path.join(os.getcwd(), 'networks/LocalizationNet/LocalizationNet_weights.best.hdf5')\n",
+    "dir_ddbb     = os.path.join(out_path, 'imgs')\n",
+    "check_if_exist(os.path.join(out_path, 'Urethra', 'GT_VOI'))\n",
     "if use_manual_OARs: \n",
     "    check_if_exist(os.path.join(out_path, 'mVOIs', 'imagesTs')) # Path to save generated VOIs\n",
     "    check_if_exist(os.path.join(out_path, 'OARs', 'manual'))\n",
@@ -82,10 +98,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 3. OARs Segmentation: Fine Segmentation Network\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
-    "print(\"3. OARs SEGMENTATION (OUTPUT 1)...\")\n",
+    "print(\"3. OARs SEGMENTATION : Fine Segmentation Network\")\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
+    "\n",
     "# Environmnet Variables\n",
     "main_dir  = os.path.join(os.getcwd(), 'networks/SegmentationNet/nnUNet')\n",
     "# Can be set in the the .bashrc file or exported in the terminal:\n",
@@ -94,16 +110,18 @@
     "os.environ['RESULTS_FOLDER']       = os.path.join(main_dir,'nnUNet_trained_models')\n",
     "os.environ['MKL_SERVICE_FORCE_INTEL'] = \"1\"\n",
     "\n",
-    "path_imgs    = os.path.join(out_path, 'VOIs', 'imagesTs')\n",
+    "if use_manual_OARs: path_imgs    = os.path.join(out_path, 'mVOIs', 'imagesTs')\n",
+    "else: path_imgs    = os.path.join(out_path, 'VOIs', 'imagesTs')\n",
     "dir_ddbb_OARs = os.path.join(out_path, 'OARs', model)\n",
     "\n",
     "# Predict OAR segmentations (rectum, bladder, prostate, seminal vesicles)\n",
     "if model=='FR_model':\n",
     "    !nnUNet_predict -i {path_imgs} -o {dir_ddbb_OARs} -t 112 -tr nnUNetTrainerV2 -ctr nnUNetTrainerV2CascadeFullRes -m 3d_fullres -p nnUNetPlansv2.1 --disable_tta\n",
     "\n",
-    "elif model=='Mixed_model':\n",
+    "if model=='Mixed_model':\n",
     "    !nnUNet_predict -i {path_imgs} -o {dir_ddbb_OARs} -t 113 -tr nnUNetTrainerV2 -ctr nnUNetTrainerV2CascadeFullRes -m 3d_fullres -p nnUNetPlansv2.1 --disable_tta\n",
     "\n",
+    "# Post-processing and exportation\n",
     "for i, file_OARs in enumerate(sorted(glob(dir_ddbb_OARs + r'/*.nii.gz'))):\n",
     "    idx = file_OARs.split('/')[-1].split('_')[-1].split('.')[0]\n",
     "    print(file_OARs)\n",
@@ -112,17 +130,16 @@
     "\n",
     "    # 3.1 Post-processing to Native space\n",
     "    print(\"3.1 OARs SEGMENTATION POST-PROCESSING TO NATIVE SPACE -------------------------------------------------\")\n",
-    "    postprocessing_native(out_OARs, out_path, str(idx),'OARs', ddbb, modality)\n",
-    "    postprocessing_native(out_VOI, out_path, str(idx),'VOI', ddbb, modality)\n",
+    "    postprocessing_native(out_OARs, out_path, str(idx),'OARs', ddbb, use_manual_OARs=use_manual_OARs)\n",
+    "    postprocessing_native(out_VOI, out_path, str(idx),'VOI', ddbb, use_manual_OARs=use_manual_OARs)\n",
     "\n",
     "    # 3.2 Exportation to Dicom-RT\n",
     "    print(\"3.2 OARs SEGMENTATION EXPORTATION TO DICOM-RT ---------------------------------------------------------\")\n",
     "    img_file  = os.path.join(out_path, 'Native', str(idx), ddbb+'_'+str(idx)+'_VOI.nii.gz')\n",
     "    seg_file = os.path.join(out_path, 'Native', str(idx), ddbb+'_'+str(idx)+'_OARs.nii.gz')\n",
-    "    save_path = os.path.join(out_path, 'Native', 'DICOM', str(idx))\n",
-    "    # For the moment, we can only translate CTs and their segmentations to DICOM; not MR images\n",
-    "    if modality=='CT':\n",
-    "        export2dicomRT(img_file, seg_file, save_path, 'OARs_DLUS', modality)"
+    "    save_path = os.path.join(out_path, 'DICOM', str(idx))\n",
+    "    try: export2dicomRT(img_file, seg_file, save_path, 'OARs_DLUS')\n",
+    "    except: print('----------------------------- Error exporting to DICOM ---------------------------')"
    ]
   },
   {
@@ -132,12 +149,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4. DISTANCE MAP COMPUTATION\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
     "print(\"4. DISTANCE MAP COMPUTATION...\")\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
+    "\n",
+    "# Create paths to save the distance maps\n",
     "if use_manual_OARs: check_if_exist(os.path.join(out_path, 'mDistanceMaps', 'imagesTs'))\n",
     "else: check_if_exist(os.path.join(out_path, 'DistanceMaps', 'imagesTs'))\n",
+    "    \n",
     "# Bladder & Prostate Segmentation and DM Computation\n",
     "dm_computation(dir_ddbb, out_path, model, use_manual_OARs)"
    ]
@@ -149,54 +168,43 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 5. URETHRA SEGMENTATION\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
     "print(\"5. URETHRA SEGMENTATION\")\n",
     "print(\"-------------------------------------------------------------------------------------------------------\")\n",
     "\n",
     "if use_manual_OARs:\n",
     "    path_dm = os.path.join(out_path, 'mDistanceMaps', 'imagesTs')\n",
-    "    dir_ddbb_uretra = os.path.join(out_path, 'Urethra', 'manual')\n",
+    "    dir_ddbb_uretra = os.path.join(out_path, 'Urethra', 'manualDLUS')\n",
     "else:\n",
     "    path_dm = os.path.join(out_path, 'DistanceMaps', 'imagesTs')\n",
     "    dir_ddbb_uretra = os.path.join(out_path, 'Urethra', 'DLUS')\n",
     "\n",
     "!nnUNet_predict -i {path_dm} -o {dir_ddbb_uretra} -t 108 -tr nnUNetTrainerV2 -ctr nnUNetTrainerV2CascadeFullRes -m 3d_fullres -p nnUNetPlansv2.1 --disable_tta\n",
     "\n",
+    "# Post-processing and exportation\n",
     "for i, file_out_urethra in enumerate(sorted(glob(dir_ddbb_uretra + r'/*.nii.gz'))):\n",
     "    idx = file_out_urethra.split('/')[-1].split('_')[-1].split('.')[0]\n",
     "    print(file_out_urethra)\n",
     "    out_urethra = sitk.ReadImage(file_out_urethra)\n",
-    "    \n",
+    "\n",
     "    # 5.1 Post-processing to Native space\n",
     "    print(\"5.1 URETHRA SEGMENTATION POST-PROCESSING TO NATIVE SPACE ----------------------------------------------\")\n",
-    "    if use_manual_OARs:    postprocessing_native(out_urethra, out_path, str(idx),'m_urethra', ddbb, modality)\n",
-    "    else: postprocessing_native(out_urethra, out_path, str(idx),'urethra', ddbb, modality)\n",
+    "    if use_manual_OARs:    postprocessing_native(out_urethra, out_path, str(idx),'m_urethra', ddbb, use_manual_OARs=use_manual_OARs)\n",
+    "    else: postprocessing_native(out_urethra, out_path, str(idx),'urethra', ddbb, use_manual_OARs=use_manual_OARs)\n",
     "    \n",
     "    # 5.2 Exportation to Dicom-RT\n",
     "    print(\"5.2 URETHRA SEGMENTATION EXPORTATION TO DICOM-RT ------------------------------------------------------\")\n",
     "    img_file  = os.path.join(out_path, 'Native', str(idx), ddbb+'_'+str(idx)+'_VOI.nii.gz')\n",
     "    seg_file = os.path.join(out_path, 'Native', str(idx), ddbb+'_'+str(idx)+'_urethra.nii.gz')\n",
     "    save_path = os.path.join(out_path, 'Native', 'DICOM', str(idx))\n",
-    "    # For the moment, we can only translate CTs and their segmentations to DICOM; not MR images\n",
-    "    if modality=='CT':\n",
-    "        export2dicomRT(img_file, seg_file, save_path, 'urethra_DLUS', modality)\n",
-    "\n",
-    "print(\"--- Total Execution Time: %s seconds ---\" % (time.time() - start_ini))"
+    "    try: export2dicomRT(img_file, seg_file, save_path, 'urethra_DLUS')\n",
+    "    except: print('----------------------------- Error exporting to DICOM ---------------------------')"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8c470c46",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "7d3ed9e4",
+   "id": "82db27bd",
    "metadata": {},
    "outputs": [],
    "source": []
