--- a/TEST.ipynb
+++ b/TEST.ipynb
@@ -36,6 +36,7 @@
     "from utils.utilities import check_if_exist\n",
     "from utils.load_data import load_data\n",
     "from utils.voi_extraction import run_voi_extraction\n",
+    "from utils.download_pretrained_weights import download_pretrained_weights\n",
     "from utils.postprocessing import postprocessing_native, export2dicomRT\n",
     "from utils.dm_computation import dm_computation"
    ]
@@ -116,9 +117,11 @@
     "\n",
     "# Predict OAR segmentations (rectum, bladder, prostate, seminal vesicles)\n",
     "if model=='FR_model':\n",
+    "    download_pretrained_weights(task_id=112)\n",
     "    !nnUNet_predict -i {path_imgs} -o {dir_ddbb_OARs} -t 112 -tr nnUNetTrainerV2 -ctr nnUNetTrainerV2CascadeFullRes -m 3d_fullres -p nnUNetPlansv2.1 --disable_tta\n",
     "\n",
     "if model=='Mixed_model':\n",
+    "    download_pretrained_weights(task_id=113)\n",
     "    !nnUNet_predict -i {path_imgs} -o {dir_ddbb_OARs} -t 113 -tr nnUNetTrainerV2 -ctr nnUNetTrainerV2CascadeFullRes -m 3d_fullres -p nnUNetPlansv2.1 --disable_tta\n",
     "\n",
     "# Post-processing and exportation\n",
@@ -179,6 +182,7 @@
     "    path_dm = os.path.join(out_path, 'DistanceMaps', 'imagesTs')\n",
     "    dir_ddbb_uretra = os.path.join(out_path, 'Urethra', 'DLUS')\n",
     "\n",
+    "download_pretrained_weights(task_id=108)\n",
     "!nnUNet_predict -i {path_dm} -o {dir_ddbb_uretra} -t 108 -tr nnUNetTrainerV2 -ctr nnUNetTrainerV2CascadeFullRes -m 3d_fullres -p nnUNetPlansv2.1 --disable_tta\n",
     "\n",
     "# Post-processing and exportation\n",
