--- a/TEST.ipynb
+++ b/TEST.ipynb
@@ -9,10 +9,10 @@
    "source": [
     "####################################################### Set up paths #######################################################\n",
     "\n",
-    "ddbb    = ... # Database name. No spaces, no underscore (_)\n",
+    "ddbb    = 'testData' # Database name. No spaces, no underscore (_)\n",
     "mode    = 'dicom' # Image mode. Options: 'nifti', 'dicom'\n",
     "model   = 'Mixed_model' # Model for OAR segmentation. Options: 'FR_model' (French rectum), 'Mixed_model' (French + Italian databases)\n",
-    "use_manual_OARs   = True # Option to use manual OAR segmentations instead of automatic ones. Options : False, True\n",
+    "use_manual_OARs   = False # Option to use manual OAR segmentations instead of automatic ones. Options : False, True\n",
     "\n",
     "####################################################### Set up paths #######################################################"
    ]
